examples/test/testpolicy3697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3697
  namespace: namespace235
spec:
  podSelector:
    matchLabels:
      key41: value31
      key2: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value43
      podSelector:
        matchLabels:
          key7: value39
          key16: value9
          key21: value5
